@@ -279,22 +279,25 @@ sub random_string {
 1;
 __END__
 
+=encoding utf8
+
 =head1 NAME
 
 String::Random - Perl module to generate random strings based on a pattern
 
 =head1 SYNOPSIS
 
-  use String::Random;
-  $foo = new String::Random;
-  print $foo->randregex('\d\d\d'); # Prints 3 random digits
-  print $foo->randpattern("...");  # Prints 3 random printable characters
+    use String::Random;
+    my $string_gen = String::Random->new;
+    print $string_gen->randregex('\d\d\d'); # Prints 3 random digits
+    # Prints 3 random printable characters
+    print $string_gen->randpattern("...");
 
 I<or>
 
-  use String::Random qw(random_regex random_string);
-  print random_regex('\d\d\d'); # Also prints 3 random digits
-  print random_string("...");   # Also prints 3 random printable characters
+    use String::Random qw(random_regex random_string);
+    print random_regex('\d\d\d'); # Also prints 3 random digits
+    print random_string("...");   # Also prints 3 random printable characters
 
 =head1 DESCRIPTION
 
@@ -304,19 +307,22 @@ As an example, let's say you are writing a script that needs to generate a
 random password for a user.  The relevant code might look something like
 this:
 
-  use String::Random;
-  $pass = new String::Random;
-  print "Your password is ", $pass->randpattern("CCcc!ccn"), "\n";
+    use String::Random;
+    my $pass = String::Random->new;
+    print "Your password is ", $pass->randpattern("CCcc!ccn"), "\n";
 
 This would output something like this:
 
   Your password is UDwp$tj5
 
+B<NOTE!!!>: currently, String::Random uses Perl's built-in predictable random
+number generator so the passwords generated by it are insecure.
+
 If you are more comfortable dealing with regular expressions, the following
 code would have a similar result:
 
   use String::Random;
-  $pass = new String::Random;
+  my $pass = String::Random->new;
   print "Your password is ",
       $pass->randregex('[A-Z]{2}[a-z]{2}.[a-z]{2}\d'), "\n";
 
@@ -325,8 +331,8 @@ code would have a similar result:
 The pre-defined patterns (for use with C<randpattern()> and C<random_pattern()>)
 are as follows:
 
-  c        Any lowercase character [a-z]
-  C        Any uppercase character [A-Z]
+  c        Any Latin lowercase character [a-z]
+  C        Any Latin uppercase character [A-Z]
   n        Any digit [0-9]
   !        A punctuation character [~`!@$%^&*()-_+={}[]|\:;"'.<>?/#,]
   .        Any of the above
@@ -338,13 +344,13 @@ create another pattern, possibly using one of the pre-defined as a base.
 For example, if you wanted a pattern C<A> that contained all upper and lower
 case letters (C<[A-Za-z]>), the following would work:
 
-  $foo = new String::Random;
-  $foo->{'A'} = [ 'A'..'Z', 'a'..'z' ];
+  my $gen = String::Random->new;
+  $gen->{'A'} = [ 'A'..'Z', 'a'..'z' ];
 
 I<or>
 
-  $foo = new String::Random;
-  $foo->{'A'} = [ @{$foo->{'C'}}, @{$foo->{'c'}} ];
+  my $gen = String::Random->new;
+  $gen->{'A'} = [ @{$gen->{'C'}}, @{$gen->{'c'}} ];
 
 The random_string function, described below, has an alternative interface
 for adding patterns.
@@ -360,8 +366,8 @@ for adding patterns.
 Create a new String::Random object.
 
 Optionally a parameter C<max> can be included to specify the maximum number
-of characters to return for C<*> and other regular expression patters that
-don't return a fixed number of characters.
+of characters to return for C<*> and other regular expression patterns that
+do not return a fixed number of characters.
 
 =item randpattern LIST
 
@@ -413,27 +419,34 @@ containing other patterns can be passed to the function.  Those lists will
 be used for 0 through 9 in the pattern (meaning the maximum number of lists
 that can be passed is 10).  For example, the following code:
 
-  print random_string("0101",
-                      ["a", "b", "c"],
-                      ["d", "e", "f"]), "\n";
+    print random_string("0101",
+                        ["a", "b", "c"],
+                        ["d", "e", "f"]), "\n";
 
 would print something like this:
 
-  cebd
+    cebd
 
 =back
 
 =head1 BUGS
 
-This is Bug Free(TM) code.  (At least until somebody finds one...)
+This is Bug Free™ code.  (At least until somebody finds one…)
+
+Please report bugs here:
+
+L<https://rt.cpan.org/Public/Dist/Display.html?Name=String-Random> .
 
 =head1 AUTHOR
 
-Steven Pritchard <steve@silug.org>
+Original Author: Steven Pritchard C<< steve@silug.org >>
+
+Now maintained by: Shlomi Fish ( L<http://www.shlomifish.org/> ).
 
 =head1 SEE ALSO
 
 perl(1).
 
 =cut
+
 # vi: set ai et:
