@@ -1,6 +1,8 @@
 Revision history for Perl extension String::Random:
 
 - Add t/style-trailing-space.t .
+- Update the POD in lib/String/Random.pm .
+- Add t/pod.t .
 
 0.22   Thu Sep 21 2006
 - Fix README to reflect current reality.
